[package]
name = "propertyio_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["extra-traits"] }
mqttio = { path = "../mqttio" }


[[bin]]
name = "mybin"
path = "src/main.rs"
